Added google maps container to profile & stock img

--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
     <link href="profile.css" rel="stylesheet">
     <style>
         #info{
-            background-image: url(img/nature-tree-green-pine.jpg);
+            background-image: url(img/night-camera-lens-map.jpg);
         }
     </style>
 
@@ -104,6 +104,23 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid">
+            <div id="map" class="row">
+                    
+            </div>
+        </div>
+        <script>
+        var map;
+        function initMap() {
+          map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: -34.397, lng: 150.644},
+            zoom: 8
+          });
+        }
+    </script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0UjvGISTt2Ag7TwvlWwrNcXv80k94t74&callback=initMap">
+        </script>
             <!--<h1>Teach or be taught</h1>
             <hr>
             <p>At <b>Brouze</b>, our mission is to make it easier for those who need academic help. With our website, students can look up tutors by school or area code. This allows students to be taught by tutors who have experienced the same courses and teachers.</p>
