Centered google map on portland

--- a/profile.html
+++ b/profile.html
@@ -94,7 +94,7 @@
 
             </div>
         </div>
-
+        <!-- google maps map container -->
         <div class="container-fluid">
             <div id="info" class="row">
                 <div id="bg" class="container">
@@ -113,8 +113,8 @@
         var map;
         function initMap() {
           map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: -34.397, lng: 150.644},
-            zoom: 8
+            center: {lat: 45.5200, lng:  -122.6819},
+            zoom: 12
           });
         }
     </script>
