--- a/dashboard.html
+++ b/dashboard.html
@@ -184,18 +184,18 @@
                 var key = childSnapshot.key();
                 specificHike(key);
               });
-              for (index = 0; index < states.length; index++) 
-              {
-                    console.log(states[index]);
-              }
+              //for (index = 0; index < states.length; index++) 
+              //{
+              //      console.log(states[index]);
+              //}
             });
         }
-        function specificHike(key,states)
+        function specificHike(key/*,states*/)
         {
             var hikeRef = new Firebase("https://testapp31415.firebaseio.com/hikes/"+key);
             hikeRef.on("value", function(snapshot) {
             var hikeNode = (snapshot.val());
-            states.push(hikeNode.state);
+            //states.push(hikeNode.state);
             $('#canHikeTable tr:last').after('<tr><td id=leader>' + hikeNode.leader + '</td><td id=state>' + hikeNode.state + '</td><td id=zip>' + hikeNode.zip + '</td><td id=trail>' + hikeNode.trail + '</td><td id=type>' + hikeNode.type + '</td><td id= comment>' + hikeNode.comment + '</td><td></tr>');    
             }, function (errorObject) {
               console.log("The read failed: " + errorObject.code);
