--- a/addHike.html
+++ b/addHike.html
@@ -123,9 +123,9 @@
             });
             hikeData = newHike.key();
             console.log("hikeData: " + hikeData);
-           // userRef.child("hikes").child(hikeData).set({
-            //  type: "leader"
-            //});
+            userRef.child("hikes").child(hikeData).set({
+              type: "leader"
+            });
             home();
         }
         function home(){
