yet another stock photo sorry I really like stock photos

--- a/search.html
+++ b/search.html
@@ -133,7 +133,7 @@
                 var comment = currentUser.comment;
                 var leader = currentUser.leaderName;
                // checkIfFave(miniKey,username);
-                $("#miniList").append('<div class="container mini-profile"  id='+miniKey+'><div class="row"><div class="col-md-4"><h2>'+trail+'</h2><h3>'+zipcode+'</h3><h4>'+comment+'</h4></div><div class="col-md-4"><img class="img-responsive" src="img/designer-board-typo-word.jpg" id="mini-pic"></div><div class="col-md-4"><h2>'+state+'</h2><h3>'+type+'</h3><h4>'+leader+'</h4></div></div></div>');
+                $("#miniList").append('<div class="container mini-profile"  id='+miniKey+'><div class="row"><div class="col-md-4"><h2>'+trail+'</h2><h3>'+zipcode+'</h3><h4>'+comment+'</h4></div><div class="col-md-4"><img class="img-responsive" src="img/pexels-photo%20(1).jpeg" id="mini-pic"></div><div class="col-md-4"><h2>'+state+'</h2><h3>'+type+'</h3><h4>'+leader+'</h4></div></div></div>');
                 //apply_click(miniKey,results);
             });
         }
