updated images on landing page

--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
           <p class="lead"></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        
+          <img class="featurette-image img-responsive center-block" src="img/createAhike.PNG" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -178,7 +179,7 @@
           <p class="lead"></p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/dashboard2.PNG" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -190,7 +191,7 @@
           <p class="lead"></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/findHikes.PNG" alt="Generic placeholder image">
         </div>
       </div>
 
