--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
 
         <hr class="featurette-divider">
-        <a href="#" class="btn btn-primary btn-lg btn-block">Sign up today</a>
+        <a href="sign-up.html" class="btn btn-primary btn-lg btn-block">Sign up today</a>
         <hr class="featurette-divider">
         <!-- Footer -->
         <footer>
