updated landing page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a href="#about">Plan</a>
                     </li>
                     <li>
-                        <a href="#services">Veiw</a>
+                        <a href="#services">View</a>
                     </li>
                     <li>
                         <a href="#contact">Search</a>
@@ -85,33 +85,33 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">Allows you to plan urban hikes
+            <img class="featurette-image img-responsive pull-right" src="img/createAhike.PNG">
+            <h2 class="featurette-heading">Plan urban hikes
                 <span class="text-muted">using existing trimet routes</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead"></p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="services">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">See other hikes that you have created
+            <img class="featurette-image img-responsive pull-left" src="img/dashboard2.PNG">
+            <h2 class="featurette-heading">View other hikes that you have created
                 <span class="text-muted">and check ones you have signed up for</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead"></p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette --> 
         <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-responsive pull-right" src="img/findHikes.PNG">
             <h2 class="featurette-heading">Search for hikes
                 <span class="text-muted">using dynamic parameters</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead"></p>
         </div>
 
         <hr class="featurette-divider">
