--- a/sign-in.html
+++ b/sign-in.html
@@ -130,6 +130,7 @@
         function logIn(userData,email){
              console.log("okay so we logged in and " + userData);
              sessionStorage.setItem("userData", userData);
+             sessionStorage.setItem("userViewerData", userData);
              window.location.href = "profile.html";
         }
         function clear(){
