--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     </span><title>Join Hiker Today </title>
-    <link rel="shortcut icon" href="img/favicon.jpg" type="image/jpg">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <!--<link rel="icon" href="../../favicon.ico">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
