updated all headers and favicons

--- a/addHike.html
+++ b/addHike.html
@@ -11,8 +11,8 @@
     <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-    <title>Brouze | New User</title>
-
+    <title>Add a hike</title>
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <!-- Bootstrap Core CSS -->
     <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
 
