--- a/dashboard.html
+++ b/dashboard.html
@@ -7,9 +7,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
-    <title>Dashboard Template for Bootstrap</title>
+    <title>Current hikes</title>
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
 
     <!-- Bootstrap core CSS -->
     <link href = "bootstrap-3.3.5-dist/css/bootstrap.min.css"rel="stylesheet">
