--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,6 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<link rel="icon" href="../../favicon.ico">-->
       
     <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter|Libre+Baskerville' rel='stylesheet' type='text/css'>
@@ -15,6 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
     <title>Profile</title>
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
