--- a/sign-in.html
+++ b/sign-in.html
@@ -12,7 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <script src='http://cdn.ractivejs.org/latest/ractive.js'></script>
     <title>Hike | New User</title>
-
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <!-- Bootstrap Core CSS -->
     <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
 
