took out useless files

--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Current hikes</title>
+    <title>My Hikes</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
 
     <!-- Bootstrap core CSS -->
@@ -50,7 +50,6 @@
             <li><a href="addHike.html">New Hike</a></li>
             <li><a href="settings.html">Settings</a></li>
             <li><a href="profile.html">Profile</a></li>
-            <li><a href="carousel.html">Carousel</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search...">
