--- a/carousel2.html
+++ b/carousel2.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 <link rel="stylesheet" type="text/css" href="slick/style.css">
 <link rel="stylesheet" type="text/css" href="slick/prism.css" /> 
-<link rel="stylesheet" type="text/css" href="carousel.css"/> 
+<link rel="stylesheet" type="text/css" href="carousel2.css"/> 
 <!--<link rel="stylesheet" type="text/css" href="search.css"/> -->
     
 <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
@@ -55,6 +55,7 @@ $('.hikes').slick({
         console.log("hey we are here");
         /*$('.hikes').slick({
         });*/
+        $('.hikes').slick('slickAdd','<div class="container filter"><div class="col"><div class="col-md-12"><h2>Filter</h2><h3></h3><h2></h2><h3></h3><h4></h4></div></div></div>');
         console.log("we are about to do the thing");
         countHike();
     };
@@ -85,7 +86,7 @@ $('.hikes').slick({
                 var leader = currentUser.leaderName;
                // checkIfFave(miniKey,username);
                 console.log("i am trying here");
-                $('.hikes').slick('slickAdd','<div class="container mini-profile"  id='+miniKey+'><div class="col"><div class="col-md-12"><h2>'+trail+'</h2><h3>'+zipcode+'</h3><img class="img-responsive" src="img/pexels-photo%20(1).jpeg" id="mini-pic" style="margin-right:-20;margin-left:90"><h2>'+state+'</h2><h3>'+type+'</h3><h4>'+leader+'</h4></div></div></div>');
+                $('.hikes').slick('slickAdd','<div class="container mini-profile"  id='+miniKey+'><div class="col"><div class="col-md-12"><h2>'+trail+'</h2><h3>'+zipcode+'</h3><img class="img-responsive" src="img/pexels-photo%20(3).jpeg" id="mini-pic" style="margin-right:-20;margin-left:90"><h2>'+state+'</h2><h3>'+type+'</h3><h4>'+leader+'</h4></div></div></div>');
                 //apply_click(miniKey,results);
             });
         }
