made enter key work

--- a/sign-in.html
+++ b/sign-in.html
@@ -45,7 +45,7 @@
 
 </head>
 
-<body onload="parseQueryString()">
+<body onload="parseQueryString()" onkeypress="accessInfo()">
 
     <div id="bg" class="container">
         <h2>Hello again</h2>
