changed styling in profile

--- a/profile.html
+++ b/profile.html
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="container-fluid">
-        <div class="row">
+        <div id="list" class="row">
         <!--<h2 class="sub-header">Current Hikes</h2>-->
         <div class="panel-group" id="accordion">
         </div>
@@ -144,11 +144,6 @@
               <!--<p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>-->
             </div>
           </div>
-           
-        <div class="panel-group" id="accordion">
-        </div>
-        </div>
-
       </div>
     <script>
         var thing = sessionStorage.getItem("userViewerData");
