--- a/profile.html
+++ b/profile.html
@@ -99,7 +99,7 @@
         </div>
         <div class="container-fluid">
         <div id="list" class="row">
-        <!--<h2 class="sub-header">Current Hikes</h2>-->
+        <h2 class="sub-header">Current Hikes</h2>
         <div class="panel-group" id="accordion">
         </div>
         </div>
