--- a/addHike.html
+++ b/addHike.html
@@ -59,21 +59,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-W59W9W');</script>
 <!-- End Google Tag Manager -->
     
-<div id="bg" class="container">
+<div id="bg" class="container" id="address">
   <h2>Create a Hike</h2>
   <p>To add a hike, fill in the form below.</p>
-  <form role="form" onsubmit="accessInfo()">
+  <form role="form" onsubmit="accessInfo()" id="address">
     <div class="form-group" id="locationField"> 
       <label for="start">Hike Start Address:</label>
       <input type="text" class="form-control" id="autocomplete" placeholder="Enter your address"onFocus="geolocate()" type="text"></input>
     </div>      
     <div class="form-group">
       <label for="location">Hike location (by state):</label>
-      <input type="text" class="form-control" id="location" placeholder="Oregon">
+      <input type="text" class="form-control" id="administrative_area_level_1" placeholder="Oregon">
     </div>
     <div class="form-group">
       <label for="zip">Hike location (by zipcode):</label>
-      <input type="text" class="form-control" id="zip" placeholder="97219" maxlength=5>
+      <input type="text" class="form-control" id="postal_code" placeholder="97219" maxlength=5>
     </div>   
     <div class="form-group">
        <label for="type">Type of Hike:</label>
