--- a/addHike.html
+++ b/addHike.html
@@ -103,7 +103,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
     <div class="form-group">
       <label for="zip">Hike location (by zipcode):</label>
-      <input type="text" class="form-control" id="postal_code" placeholder="97219" maxlength=5>
+      <input type="text" class="form-control" id="zip" placeholder="97219" maxlength=5>
     </div>   
     <div class="form-group">
        <label for="type">Type of Hike:</label>
@@ -150,11 +150,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             var newHike = hikeRef.push({
               leader: thing,
               leaderName: name,
-              state: $("#location").val(),
+              state: $("#administrative_area_level_1").val(),
               zip: $("#zip").val(),
               trail: $("#trail").val(),
               type: $("#type").val(),
-              comment: $("#comment").val()
+              comment: $("#comment").val(),
+              dateTime: $("#datetimepicker1").val()
             });
             hikeData = newHike.key();
             console.log("hikeData: " + hikeData);
