--- a/public/carousel2.html
+++ b/public/carousel2.html
@@ -3,7 +3,7 @@
 <meta Charset="utf-8">
 <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 <link rel="stylesheet" type="text/css" href="slick/style.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
     
 
 <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
@@ -16,10 +16,10 @@
 <link rel="stylesheet" type="text/css" href="carousel2.css"/> 
 <!--<link rel="stylesheet" type="text/css" href="search.css"/> -->
     
-<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
-<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
+<link rel="stylesheet" type="text/css" href="bower_components/slick-carousel/slick/slick.css"/>
+<script type="text/javascript" src="bower_components/slick-carousel/slick/slick.min.js"></script>
 
-<link href = "bootstrap-3.3.5-dist/css/bootstrap.min.css"rel="stylesheet">
+<link href = "bower_components/bootstrap/dist/css/bootstrap.min.css"rel="stylesheet">
   
 </head>
 <body onload="slideSetUp()">
