--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
 
     <!-- Bootstrap core CSS -->
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="profile.css" rel="stylesheet">
@@ -69,9 +69,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <a><span class="glyphicon glyphicon-search" id="searchEmailButton" aria-hidden = "true"</span></a>
                   </li>
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Search</a></li>
                   <li><a href="#">Help</a></li>
                   <li><a href="settings.html"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a></li>
+                  <li><a onclick = "signOut()">Log Out</a></li>
                   
                 </ul>
               </nav>
@@ -212,7 +212,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               });
             });
         }
-        var coll=4;
+        var coll=0;
         function searchHike()
         {
             var states = new Array();
@@ -234,17 +234,46 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             hikeRef.on("value", function(snapshot) {
             var hikeNode = (snapshot.val());
 
-            $('#accordion').append('<div class="panel panel-default"><div class="panel-heading"><h4 class="panel-title"><a id='+coll+' data-toggle="collapse" data-parent="#accordion" href="#collapse'+coll+'">'+hikeNode.trail+'</a></h4></div><div id=collapse'+coll+' class="panel-collapse collapse"><div class="panel-body"><p>Leader Name: '+hikeNode.leaderName+'</p><p>Difficulty: '+hikeNode.type+'</p><p>Description: '+hikeNode.comment+'</p></div></div></div>'); //'</td><td id=state>' + hikeNode.state + '</td><td id=zip>' + hikeNode.zip + '</td><td id=trail>' + hikeNode.trail + '</td><td id=type>' + hikeNode.type + '</td><td id= comment>'/*+ hikeNode.comment + '</td><td></tr>'*/);
-            /*$('a').on('click',function(){
-            var status = $(this).attr('id')
-            console.log(status+'this is status');
-            $(".panel-body").collapse('toggle');
-            });*/
+            $('#accordion').append('<div class="panel panel-default"><div class="panel-heading"><h4 class="panel-title"><span id = '+key+' class="glyphicon glyphicon-trash" aria-hidden="true"></span><a id='+coll+' data-toggle="collapse" data-parent="#accordion" href="#collapse'+coll+'">'+hikeNode.trail+'</a></h4></div><div id=collapse'+coll+' class="panel-collapse collapse"><div class="panel-body"><p>Leader Name: '+hikeNode.leaderName+'</p><p>Difficulty: '+hikeNode.type+'</p><p>Description: '+hikeNode.comment+'</p></div></div></div>'); //'</td><td id=state>' + hikeNode.state + '</td><td id=zip>' + hikeNode.zip + '</td><td id=trail>' + hikeNode.trail + '</td><td id=type>' + hikeNode.type + '</td><td id= comment>'/*+ hikeNode.comment + '</td><td></tr>'*/);
+            $('.glyphicon-trash').on('click',function(){
+                    var status = $(this).attr('id');
+                    console.log(status+' this is status');
+                    formalDelete(status);
+                });
             coll++;
             
             }, function (errorObject) {
               console.log("The read failed: " + errorObject.code);
             });
+        }
+        function signOut(){
+            var ref = new Firebase("https://testapp31415.firebaseio.com");
+            // Sometime later...
+            // Unauthenticate the 
+            console.log("in sign out");
+            ref.unauth();
+            window.location.href = "index.html";
+        }
+        function formalDelete(key){
+            var deleteRef = new Firebase("https://testapp31415.firebaseio.com/users/"+thing+"/hikes/"+key);
+            deleteRef.on("value", function(snap) {
+                var deleteNode = (snap.val());
+                console.log(deleteNode.type);
+                if(deleteNode.type == "follower"){
+                    deleteRef.remove();
+                    location.reload();
+                    //refresh();
+                }
+            });
+        }
+        function refresh(){
+            var i = 0;
+            for(i = 0; i < coll;i++){
+                $("#accordion").last().remove();
+            }
+            coll = 0;
+            console.log("about to call search hike");
+            searchHike();
         }
     </script>
     <!-- Bootstrap core JavaScript
