--- a/addHike.html
+++ b/addHike.html
@@ -9,13 +9,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
     <title>Add a hike</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <!-- Bootstrap Core CSS -->
-    <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
-
+   
     <!-- Custom CSS -->
     <link href="addHike.css" rel="stylesheet">
 
@@ -29,7 +27,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     
    <!-- ... -->
   <script type="text/javascript" src="/bower_components/jquery/jquery.min.js"></script>
