--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="bootstrap-3.3.5-dist/js/bootstrap.js"></script>
     -->
     <!-- Bootstrap Core CSS -->
-    <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     
