--- a/addHike.html
+++ b/addHike.html
@@ -30,18 +30,18 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     
    <!-- ... -->
-  <script type="text/javascript" src="/bower_components/jquery/jquery.min.js"></script>
-  <script type="text/javascript" src="/bower_components/moment/min/moment.min.js"></script>
-  <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
+  <script async type="text/javascript" src="/bower_components/jquery/jquery.min.js"></script>
+  <script async type="text/javascript" src="/bower_components/moment/min/moment.min.js"></script>
+  <script async type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script async type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+  <link async rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+  <link async rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
   
   
-<link href="bower_components/bootstrap-fileinput/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css" />
+<link async href="bower_components/bootstrap-fileinput/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css" />
 
-<script src="bower_components/bootstrap-fileinput/js/plugins/canvas-to-blob.min.js" type="text/javascript"></script>
-<script src="bower_components/bootstrap-fileinput/js/fileinput.min.js" type="text/javascript"></script>
+<script async src="bower_components/bootstrap-fileinput/js/plugins/canvas-to-blob.min.js" type="text/javascript"></script>
+<script async src="bower_components/bootstrap-fileinput/js/fileinput.min.js" type="text/javascript"></script>
 <!-- bootstrap.js below is only needed if you wish to use the feature of viewing details 
      of text file preview via modal dialog -->
 
@@ -121,7 +121,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
     <div class="form-group">
       <label class="control-label">Select Hike Picture to Upload</label>
-      <input id="input-1" type="file" class="file">
+      <input id="picture" type="file" class="file">
     </div>
     <div class="form-group">
        <label for="type">Type of Hike:</label>
@@ -169,7 +169,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               trail: $("#trail").val(),
               type: $("#type").val(),
               comment: $("#comment").val(),
-              dateTime: $("#datetimepicker1").val()
+              dateTime: $("#datetimepicker1").val(),
+              link: $("#link").val(),
+              picture: $("#picture").val()
             });
             hikeData = newHike.key();
             console.log("hikeData: " + hikeData);
