--- a/hikePage.html
+++ b/hikePage.html
@@ -15,7 +15,7 @@
     <script src="bower_components/bootstrap-tabs-x/js/bootstrap-tabs-x.min.js" type="text/javascript"></script>  
     <link href="bower_components/bootstrap-tabs-x/css/bootstrap-tabs-x.min.css" media="all" rel="stylesheet" type="text/css" />  
 
-    <link rel="stylesheet" type="text/css" href="hikePage.css"/> 
+    <link rel="stylesheet" media="all" type="text/css" href="hikePage.css"/>
     <!--<link rel="stylesheet" type="text/css" href="search.css"/> -->
 
     <link rel="stylesheet" type="text/css" href="bower_components/slick-carousel/slick/slick.css"/>
@@ -28,31 +28,22 @@
         <div class="col-xs-6" id = "words">
            <div class='tabs-x tabs-left tabs-krajee'>
                 <ul id="myTab-3" class="nav nav-tabs" role="tablist">
-                    <li class="active"><a href="#home-3" role="tab" data-toggle="tab">Home</a></li>
+                    <!--<li class="active"><a href="#home-3" role="tab" data-toggle="tab">Home</a></li>-->
+                    <li class = active><a href="#zero" role="tab-kv" data-toggle="tab">Trail</a></li>
                     <li><a href="#one" role="tab-kv" data-toggle="tab">Comments</a></li>
                     <li><a href="#two" role="tab-kv" data-toggle="tab">Hike Leader</a></li>
                     <li><a href="#three" role="tab-kv" data-toggle="tab">State</a></li>
                     <li><a href="#four" role="tab-kv" data-toggle="tab">Hike Difficulty</a></li>
                     <li><a href="#five" role="tab-kv" data-toggle="tab">Zipcode</a></li>
-                    
-                    <li class="dropdown">
-                        <a href="#" id="myTabDrop-3" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="myTabDrop-1">
-                            <li><a href="#dropdown-3-1" tabindex="-1" role="tab" data-toggle="tab">Option 1</a></li>
-                            <li><a href="#dropdown-3-2" tabindex="-1" role="tab" data-toggle="tab">Option 2</a></li>
-                        </ul>
-                    </li>
-                    <li class="disabled"><a href="#disabled-3"><i class="glyphicon glyphicon-knight"></i> Disabled</a></li>
                 </ul>
                 <div id="myTabContent-3" class="tab-content">
-                    <div class="tab-pane fade in active" id="home-3"><p></p></div>
+                    <!--<div class="tab-pane fade in active"><p id = "trail"></p></div>-->
+                    <div class="tab-pane fade in active" id="zero"><p id="trail"></p></div>
                     <div class="tab-pane fade" id="one"><p id="comment"></p></div>
                     <div class="tab-pane fade" id="two"><p id="leader"></p></div>
                     <div class="tab-pane fade" id="three"><p id="state"></p></div>
                     <div class="tab-pane fade" id="four"><p id="type"></p></div>
                     <div class="tab-pane fade" id="five"><p id="zip"></p></div>
-                    <div class="tab-pane fade" id="dropdown-3-2"><p>...</p></div>
-                    <div class="tab-pane fade" id="disabled-3">Disabled Content</div>
                 </div>
             </div>
         </div>
@@ -62,10 +53,12 @@
             
             var hike = sessionStorage.getItem("hike");
             console.log("hike id is " + hike);
+            decorate();
             function decorate(){
                 var hikeRef = new Firebase("https://testapp31415.firebaseio.com/hikes/"+hike);
                 hikeRef.on("value", function(snapshot) {
                     var hikeNode = (snapshot.val());
+                    $("#trail").text(hikeNode.trail);
                     $("#comment").text(hikeNode.comment);
                     $("#leader").text(hikeNode.leaderName);
                     $("#state").text(hikeNode.state);
